[package]
name = "particlesim"
version = "0.1.0"
edition = "2024"

[dependencies]
quarkstrom = { path="./quarkstrom" }

# Graphics
winit = "0.30.12"
winit_input_helper = "0.17.0"

# Gui
egui = "0.33.0"

# Math
ultraviolet = "0.10.0"
fastrand = "2.3.0"

# Other
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }