[package]
name = "billiards_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
quarkstrom = { path="./quarkstrom" }

# Graphics
winit_input_helper = "0.17.0"

# Gui
egui = "0.33.0"

# Math
ultraviolet = { version = "0.10.0", features = [ "f64" ] }

# Other
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }